[gd_scene load_steps=7 format=3 uid="uid://bvlwjahwcirf8"]

[ext_resource type="Script" uid="uid://dl7sdnrpxb172" path="res://scripts/service_info_ctl.gd" id="1_1au20"]
[ext_resource type="PackedScene" uid="uid://crcxlxwak8ly1" path="res://ui_components/service_selector_box.tscn" id="2_l4qes"]
[ext_resource type="Theme" uid="uid://cm8odm551bxi3" path="res://resources/themes/main-theme.tres/main.tres" id="2_wq3jn"]
[ext_resource type="PackedScene" uid="uid://dbfkmnmlmiyw1" path="res://ui_components/svc_panel.tscn" id="4_wq3jn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(0.0011974451, 0.0011974451, 0.0011974442, 1)

[sub_resource type="Theme" id="Theme_7mycd"]
Panel/styles/panel = SubResource("StyleBoxFlat_lquwl")

[node name="Selector" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1au20")
metadata/_tab_index = 0

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
touch_dragger_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="ServicePicker" type="VBoxContainer" parent="HSplitContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_wq3jn")

[node name="ServiceSelectorBox" parent="HSplitContainer/MarginContainer/ScrollContainer/ServicePicker" instance=ExtResource("2_l4qes")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ResultPanel" type="Panel" parent="HSplitContainer/MarginContainer2"]
layout_mode = 2
theme = SubResource("Theme_7mycd")

[node name="ResultContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer2/ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/MarginContainer2/ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ServiceResult" parent="HSplitContainer/MarginContainer2/ResultPanel/MarginContainer" instance=ExtResource("4_wq3jn")]
unique_name_in_owner = true
layout_mode = 2

[node name="ServiceSelector" type="OptionButton" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14
selected = 1
item_count = 2
popup/item_0/text = "deploy-service"
popup/item_0/id = 0
popup/item_1/text = "docker-go-build"
popup/item_1/id = 1
